--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             	<div class="wrapper">
                 <img class="img-indent" src="images/4page-img1.jpg" alt="" />
                 <div class="extra-wrap">
-                	<p>Apart from doing research that mainly defines Brian, he is also actively involved in music composition (check out the demo below), pop song chord database entry and analysis, Chinese restaurants exploration, community Chorale and yearly half-marathon (1h 54min). Additionally, he is the chief organizer of Mathematical Modeling Innovative Practice Base Team which won the <a href="http://www.comap.com/undergraduate/contests/mcm/contests/2012/results/2012_ICM_Results.pdf">2012 ICM outstanding prize</a>. His HKU team also established a Chinese social app with more than 700,000 users and an Oversea Chinese social webpage with more than 50,000 followers. His youtube channel also has occasional updates and got more than 1,000,000 views.
+                	<p>Apart from doing research that mainly defines Brian, he is also actively involved in music composition (check out the demo below), pop song chord database entry and analysis, Chinese restaurants exploration, community Chorale and yearly half-marathon (1h 54min). Additionally, he is the chief organizer of Mathematical Modeling Innovative Practice Base Team which won the <a href="http://www.comap.com/undergraduate/contests/mcm/contests/2012/results/2012_ICM_Results.pdf">2012 ICM outstanding prize</a>. His HKU team also established a Chinese social app <a href="http://apps.renren.com/jqreport?origin=40180">好友速配</a> with more than 800,000 users and an Oversea Chinese social webpage with more than 50,000 followers. His youtube channel also has occasional updates and got more than 1,000,000 views.
 </p>
 
                 </div>
