updated caltech directory link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li><a href="http://bbe.caltech.edu/">BBE Division<span>My employer</span></a></li>
           <li><a href="http://www.caltech.edu/map/">Local Map<span>Find where I am</span></a></li>
           <li><a href="http://www.its.caltech.edu/~chinese/">Caltech C<span>Chinese community</span></a></li>
-          <li><a href="http://directory.caltech.edu/cgi-bin/search.cgi?searchtext=peng+he">Contact Me<span>Caltech directory search</span></a></li>
+          <li><a href="https://directory.caltech.edu/static/personnel/caltech_personnel_directory.pdf">Address Book<span>Caltech directory search</span></a></li>
         </ul>
         <!-- /.nav -->
         <!-- faded slider -->
