removed extra stuff from top

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "">
 <html xmlns="" xml:lang="en" lang="en">
 <head>
-<title>Brian Peng He Caltech</title>
+<title>Peng He Caltech</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <link href="style.css" rel="stylesheet" type="text/css" />
@@ -29,38 +29,7 @@
           	<input type="text" class="text" value="Site Search" onfocus="if(this.value=='Site Search'){this.value=''}" onblur="if(this.value==''){this.value='Site Search'}"/><input type="submit" class="submit" value="" />
           </fieldset>
         </form>
-        <h1><a href="#">bioinfo</a></h1>
-        <!-- .nav -->
-        <ul class="nav">
-        	<li><a href="http://woldlab.caltech.edu/" class="current">Wold Lab<span>Visit my lab</span></a></li>
-          <li><a href="http://bbe.caltech.edu/">BBE Division<span>My employer</span></a></li>
-          <li><a href="http://www.caltech.edu/map/">Local Map<span>Find where I am</span></a></li>
-          <li><a href="http://www.its.caltech.edu/~chinese/">Caltech C<span>Chinese community</span></a></li>
-          <li><a href="https://directory.caltech.edu/static/personnel/caltech_personnel_directory.pdf">Address Book<span>Caltech directory search</span></a></li>
-        </ul>
-        <!-- /.nav -->
-        <!-- faded slider -->
-        <div id="faded">
-          <ul>
-            <li>
-            	<img src="images/slide1.jpg" alt="" />
-            </li>
-            <li>
-            	<img src="images/slide2.jpg" alt="" />
-            </li>
-            <li>
-            	<img src="images/slide3.jpg" alt="" />
-            </li>
-            <li>
-            	<img src="images/slide4.jpg" alt="" />
-            </li>
-          </ul>
-          <ul class="controls">
-          	<li><a href="#" class="prev"></a></li>
-            <li><a href="#" class="next"></a></li>
-          </ul>
-        </div>
-        <!-- //faded slider -->
+        <h1><p style="font-size:45px;">Peng He 何鹏</p></h1>
       </div>
       <!-- content -->
       <div id="content">
