shrunk header and edited text

--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
   <div class="tail-top">
     <div id="main">
       <!-- header -->
-      <div id="header">
-        <form action="" id="search-form">
-          <fieldset>
-          	<input type="text" class="text" value="Site Search" onfocus="if(this.value=='Site Search'){this.value=''}" onblur="if(this.value==''){this.value='Site Search'}"/><input type="submit" class="submit" value="" />
-          </fieldset>
-        </form>
-        <h1><p style="font-size:45px;">Peng He 何鹏</p></h1>
+      <div id="content">
+          <h1><p style="font-size:45px;">Peng He</p></h1>
       </div>
       <!-- content -->
       <div id="content">
@@ -48,9 +43,10 @@
             	<div class="wrapper">
               	<img class="img-indent" src="images/1page-img1.jpg" alt="" />
                 <div class="extra-wrap">
-                 <p>Brian Peng He</p>
-                 <p><a href="http://en.wikipedia.org/wiki/Zhejiang_University">Zhejiang University</a>, Science 2008-2009<br><a href="http://en.wikipedia.org/wiki/University_of_hong_kong">University of Hong Kong</a>, 1st Honor, Statistics 2009-2012<br><a href="http://en.wikipedia.org/wiki/Ucla">UCLA</a>, MCDB 2010-2011<br><a href="http://en.wikipedia.org/wiki/Caltech">Caltech</a>, Biology 2012</p>
-                  <p>After getting his Bachelor's degree in Hong Kong where he majored Statistics and Biochemistry and minored Computer Science, Brian is now a graduate student at Wold lab at Caltech. His research is focused on the role of long non-coding RNAs in regulation of stem cell pluripotency and differentiation.  </p>
+                 <p>He, Peng<br><big><big>何 鵬</big></big></p>
+                 
+                 <p><a href="http://en.wikipedia.org/wiki/Zhejiang_University">Zhejiang University</a>, Science 2008-2009<br><a href="http://en.wikipedia.org/wiki/University_of_hong_kong">University of Hong Kong</a>, 1st Honor, Statistics 2009-2012<br><a href="http://en.wikipedia.org/wiki/Ucla">UCLA</a>, MCDB 2010-2011<br><a href="https://en.wikipedia.org/wiki/Broad_Institute">Broad Institute</a>, Rotation 2013<br><a href="http://en.wikipedia.org/wiki/Caltech">Caltech</a>, Biology 2012-2018</p>
+                  <p>After getting his Bachelor's degree in Hong Kong where he majored Statistics and Biochemistry and minored Computer Science, Peng is now a graduate student of Wold lab at Caltech. His research is focused on computational analysis  </p>
 
                 </div>
               </div>
