added research description

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <div class="wrapper">
             <ul class="tabs">
               <li class="first"><a href="#tab1">About</a></li>
+              <li><a href="#tab1b">Research</a></li>
               <li><a href="#tab2">Teaching</a></li>
               <li><a href="#tab3">Others</a></li>
               <li><a href="#tab4">Contact</a></li>
@@ -46,10 +47,21 @@
                  <p>He, Peng<br><big><big>何 鵬</big></big></p>
                  
                  <p><a href="http://en.wikipedia.org/wiki/Zhejiang_University">Zhejiang University</a>, Science 2008-2009<br><a href="http://en.wikipedia.org/wiki/University_of_hong_kong">University of Hong Kong</a>, 1st Honor, Statistics 2009-2012<br><a href="http://en.wikipedia.org/wiki/Ucla">UCLA</a>, MCDB 2010-2011<br><a href="https://en.wikipedia.org/wiki/Broad_Institute">Broad Institute</a>, Rotation 2013<br><a href="http://en.wikipedia.org/wiki/Caltech">Caltech</a>, Biology 2012-2018</p>
-                  <p>After getting his Bachelor's degree in Hong Kong where he majored Statistics and Biochemistry and minored Computer Science, Peng is now a graduate student of Wold lab at Caltech. His research is focused on computational analysis  </p>
+                  <p>After getting his Bachelor's degree in Hong Kong where he majored Statistics and Biochemistry and minored Computer Science, Peng is now a graduate student of Wold lab at Caltech. His research is focused on computational analysis of high-throughput assays and gene regulation during development. </p>
 
                 </div>
               </div>
+            </div>
+            <div id="tab1b" class="tab_content">
+                <div class="wrapper">
+                    <div class="extra-wrap">
+                        <p><a href="https://scholar.google.com/citations?user=HLomE9IAAAAJ&hl=en">Publications</a></p>
+                        <p><strong>Transcriptome studies in tissue development<br> </strong>As part of the ENCODE project Phase III, individually dissected mouse embryonic tissues present high-dimensional modular structure of the mouse transcriptome. These inferred modules serve as an anchor point for regulatory mechanism exploration and are ready for integrating other indenpendent data sources.<br>Mouse forelimb is our favourite model of embryonic development. Single-cell RNA-seq reveals discrete cell states partially connected into a graph of distinct lineages in the limb, further deconvoluting bulk conclusions into cell type-specific biological insights.</p>
+                        <p><strong>Functional studies</strong><br>The non-coding genome has been a hunting ground for genomic gold miners to try their luck. CRISPR-mediated long-range deletions and overexpression of long non-coding RNAs in cell line models are used to understand the regulatory logic of these mysterious transcription products.</p>
+                        <p><strong>Genome-wide biochemical studies</strong><br>To increase the odds of identifying functional long non-coding RNAs, CLIP-seq is used to identify interacting RNAs of RNA-binding proteins.<br>Beyond the poly-adenylated part of the transcriptome, Ribo-minus RNA-seq is chose to monitor precursor and intermediate RNAs in addition to mature polyA RNAs. These additional information helps mark enhancer RNA and identify small RNA precursors.</p>
+                        <p><strong>Computational analysis for collaborators</strong><br>ATAC-seq, RNA-seq, scRNA-seq, ChIP-seq, DNase-seq, 4C-seq, DNA-seq and multiplex-DNA FISH analyses.</p>
+                    </div>
+                </div>
             </div>
             <div id="tab2" class="tab_content">
             	<div class="wrapper">
@@ -57,8 +69,8 @@
                 <div class="extra-wrap">
                 	<p>Mathematics in Biology Bi195 </p>
                   <p>Transplanted from Harvard to Caltech and instructed by <a href="http://www.cns.caltech.edu/people/faculty/meister.html">Prof. Markus Meister</a> for many years, this course provides an opportunity for biologists to get some basic trainings in linear algebra, calculus, statistics and dynamics which they might use in diversed fields of bio-research.</p>
-                	<p>The image on the left is a snapshot from Brian's TA presentations, showing a rough structure of the course. For more information, please visit our <a href="https://courses.caltech.edu/course/view.php?id=1443">course website</a> and <a href="https://access.caltech.edu/tqfr/reports/show_report?survey_id=17&term_id=460&division_id=80423&department_id=153&offering_id=65282&track_id=65282-Default">student feedback report</a></p>
-                    <p>Related courses that Brian has also taught include:</p>
+                	<p>The image on the left is a snapshot from Peng's TA presentations, showing a rough structure of the course. For more information, please visit our <a href="https://courses.caltech.edu/course/view.php?id=1443">course website</a> and <a href="https://access.caltech.edu/tqfr/reports/show_report?survey_id=17&term_id=460&division_id=80423&department_id=153&offering_id=65282&track_id=65282-Default">student feedback report</a></p>
+                    <p>Related courses that Peng has also taught include:</p>
                     <p>*   Introduction to Computational Biology and Bioinformatics Bi181</p>
                     <p>*   Human Genetics and Genomics Bi188</p>
                 </div>
