updated research image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
             </div>
             <div id="tab1b" class="tab_content">
                 <div class="wrapper">
-                    <div class="extra-wrap">
+                    <style>
+                        img { display: block; }
+                        </style>
+                    <img class="img-indent" src="images/BulkRNA.png" width="320" height="480" alt="" />
+
+                        <div class="extra-wrap">
                         <p><a href="https://scholar.google.com/citations?user=HLomE9IAAAAJ&hl=en">Publications</a></p>
                         <p><strong>Transcriptome studies in tissue development<br> </strong>As part of the ENCODE project Phase III, individually dissected mouse embryonic tissues present high-dimensional modular structure of the mouse transcriptome. These inferred modules serve as an anchor point for regulatory mechanism exploration and are ready for integrating other indenpendent data sources.<br>Mouse forelimb is our favourite model of embryonic development. Single-cell RNA-seq reveals discrete cell states partially connected into a graph of distinct lineages in the limb, further deconvoluting bulk conclusions into cell type-specific biological insights.</p>
                         <p><strong>Functional studies</strong><br>The non-coding genome has been a hunting ground for genomic gold miners to try their luck. CRISPR-mediated long-range deletions and overexpression of long non-coding RNAs in cell line models are used to understand the regulatory logic of these mysterious transcription products.</p>
