added LinkedIn profile and updated picture

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="tab_container">
           	<div id="tab1" class="tab_content">
             	<div class="wrapper">
-              	<img class="img-indent" src="images/1page-img1.jpg" alt="" />
+              	<img class="img-indent" src="images/IMG_7761_1.jpg" alt="" width="140" height="210" />
                 <div class="extra-wrap">
                  <p>He, Peng<br><big><big>何 鵬</big></big></p>
                  
@@ -94,7 +94,7 @@
             <div id="tab4" class="tab_content">
             	<div class="wrapper">
               	<p><strong>phe于caltech.edu</strong> <br>1200 E California Blvd, MC 156-29, Pasadena, CA 91125, USA</p>
-
+                <p><a href="https://www.linkedin.com/in/peng-he-73a7a920/">LinkedIn</a></p>
               </div>
             </div>
           </div>
