solved access permission problem on Wold lab server

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="tab_container">
           	<div id="tab1" class="tab_content">
             	<div class="wrapper">
-              	<img class="img-indent" src="images/IMG_7761_1.jpg" alt="" width="140" height="210" />
+              	<img class="img-indent" src="images/4page-img1.jpg" alt="" width="140" height="210" />
                 <div class="extra-wrap">
                  <p>He, Peng<br><big><big>何 鵬</big></big></p>
                  
