--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <div class="extra-wrap">
                  <p>He, Peng<br><big><big>何 鵬</big></big></p>
                  
-                 <p><a href="http://en.wikipedia.org/wiki/Zhejiang_University">Zhejiang University</a>, Science 2008-2009<br><a href="http://en.wikipedia.org/wiki/University_of_hong_kong">University of Hong Kong</a>, 1st Honor, Statistics 2009-2012<br><a href="http://en.wikipedia.org/wiki/Ucla">UCLA</a>, MCDB 2010-2011<br><a href="https://en.wikipedia.org/wiki/Broad_Institute">Broad Institute</a>, Rotation 2013<br><a href="http://en.wikipedia.org/wiki/Caltech">Caltech</a>, Biology 2012-2018</p>
-                  <p>After getting his Bachelor's degree in Hong Kong where he majored in Statistics and Biochemistry and minored Computer Science, Peng is now a graduate student of Wold lab at Caltech. His research is focused on computational analysis of high-throughput assays and gene regulation during development. </p>
+                 <p><a href="http://en.wikipedia.org/wiki/Zhejiang_University">Zhejiang University</a>, Science 2008-2009<br><a href="http://en.wikipedia.org/wiki/University_of_hong_kong">University of Hong Kong</a>, 1st Honor, Statistics 2009-2012<br><a href="http://en.wikipedia.org/wiki/Ucla">UCLA</a>, MCDB 2010-2011<br><a href="https://en.wikipedia.org/wiki/Broad_Institute">Broad Institute</a>, Rotation 2013<br><a href="http://en.wikipedia.org/wiki/Caltech">Caltech</a>, Biology 2012-2019</p>
+                  <p>A more detailed timeline of me is <a href="https://www.sanger.ac.uk/people/directory/he-peng">here</a>  </p>
 
                 </div>
               </div>
