updated index page and added Stackexchange profile

--- a/index.html
+++ b/index.html
@@ -99,12 +99,15 @@
             <div id="tab3" class="tab_content">
             	<div class="wrapper">
                 <div class="extra-wrap">
-                    <p>In the past, Peng had served on committees for <a href="https://caltechc.org/previous-committees/">Caltech C</a> and <a href="https://www.caltechy.org/programs_services/areas/#outdoors">Caltech Y Outdoor group</a>. He had also founded <a href="https://www.facebook.com/groups/120004238348308/">Caltech Bioinformatics Club</a>.</p>
-                	<p>He is a researcher, but also has been a newage composer (check out the demo below), pop song chord database manager and analyst, "cactus guy" of <a href="http://catalinas.caltech.edu/garden">community garden</a>, Chinese restaurants explorer, <a href="http://pva.caltech.edu/music/gleeclub">Caltech Glee Club</a> baritone (and webmaster), half-marathon runner (1h 54min),  manager of Mathematical Modeling Innovative Practice Base Team which won the <a href="http://www.comap.com/undergraduate/contests/mcm/contests/2012/results/2012_ICM_Results.pdf">2012 ICM outstanding prize</a>, team member of <a href="http://apps.renren.com/jqreport?origin=40180">好友速配</a> (a Complex Social Network data crowd-sourcing and mining app used by more than 800,000 users) and a Youtuber with more than 1,400,000 views.
-</p>
+                    <p>In the past, I had served on committees for <a href="https://caltechc.org/previous-committees/">Caltech C</a> and <a href="https://www.caltechy.org/programs_services/areas/#outdoors">Caltech Y Outdoor group</a>. I had also founded <a href="https://www.facebook.com/groups/120004238348308/">Caltech Bioinformatics Club</a>.</p>
+                	<p>Additionally, I have been a newage composer (check out the demo below), pop song chord database manager and analyst, "cactus guy" of <a href="http://catalinas.caltech.edu/garden">community garden</a>, Chinese restaurants explorer, <a href="http://pva.caltech.edu/music/gleeclub">Caltech Glee Club</a> baritone (and webmaster), half-marathon runner (1h 54min),  manager of Mathematical Modeling Innovative Practice Base Team which won the <a href="http://www.comap.com/undergraduate/contests/mcm/contests/2012/results/2012_ICM_Results.pdf">2012 ICM outstanding prize</a>, team member of <a href="http://apps.renren.com/jqreport?origin=40180">好友速配</a> (a Complex Social Network data crowd-sourcing and mining app used by more than 800,000 users) and a Youtuber with more than 1,400,000 views.
+                    </p>
+
 
                 </div>
      <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/193955551&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+     
+                       <a href="https://stackexchange.com/users/3622321/dr-hope"><img src="https://stackexchange.com/users/flair/3622321.png" width="208" height="58" alt="profile for Dr_Hope on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Dr_Hope on Stack Exchange, a network of free, community-driven Q&amp;A sites" /></a>
               </div>
             </div>
             <div id="tab4" class="tab_content">
