--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p><a href="https://scholar.google.com/citations?user=HLomE9IAAAAJ&hl=en">Publications</a></p>
                         
                         <p>How is life built?</p>
-                        <p>That's a question I've always been trying to answer. The power of DNA has intrigued me to enter the field of Genomics to crack the code of life. To understand the DNA language, genomicists have worked very hard searching for correlations between snippets of the codes and biological phenotypes, either natural or artificial. And I've been one of them.</p>
+                        <p>That's a question I've always been trying to answer. The power of DNA has intrigued me to enter the field of Genomics to crack the code of life. To understand the DNA language, genomicists have worked very hard searching for correlations between snippets of the codes and biological traits, either natural or artificially induced. And I've been one of them.</p>
                         
                         <p>During my PhD work I created artificial mutant cells that had novel regions in the DNA deleted to induce phenotypical changes; and also followed natural development process in the mouse embryo to monitor changes in their gene expression profiles (left figure, part of the <a href="https://www.encodeproject.org/">ENCODE project</a>). The latter approach generated a lot of interesting hypotheses about how genes work, how they are dictated in groups, and where their regulation codes sit in the DNA sequence.</p>
 
