replaced Peng with me

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <div class="extra-wrap">
                 	<p>Mathematics in Biology Bi195 </p>
                   <p>Transplanted from Harvard to Caltech and instructed by <a href="http://www.cns.caltech.edu/people/faculty/meister.html">Prof. Markus Meister</a> for many years, this course provides an opportunity for biologists to get some basic trainings in linear algebra, calculus, statistics and dynamics which they might use in diversed fields of bio-research.</p>
-                	<p>The image on the left is a snapshot from Peng's TA <a href="http://prezi.com/wlnhaczrmg18/?utm_campaign=share&utm_medium=copy&rc=ex0share">presentations</a>, showing a rough structure of the course. For more information, please visit our <a href="https://courses.caltech.edu/course/view.php?id=1443">course website</a> and <a href="https://access.caltech.edu/tqfr/reports/show_report?survey_id=17&term_id=460&division_id=80423&department_id=153&offering_id=65282&track_id=65282-Default">student feedback report</a></p>
-                    <p>Related courses that Peng has also taught include:</p>
+                	<p>The image on the left is a snapshot from my TA <a href="http://prezi.com/wlnhaczrmg18/?utm_campaign=share&utm_medium=copy&rc=ex0share">presentations</a>, showing a rough structure of the course. For more information, please visit our <a href="https://courses.caltech.edu/course/view.php?id=1443">course website</a> and <a href="https://access.caltech.edu/tqfr/reports/show_report?survey_id=17&term_id=460&division_id=80423&department_id=153&offering_id=65282&track_id=65282-Default">student feedback report</a></p>
+                    <p>Related courses I have also taught include:</p>
                     <p>*   Introduction to Computational Biology and Bioinformatics Bi181</p>
                     <p>*   Human Genetics and Genomics Bi188</p>
                 </div>
