updated research interest description

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="extra-wrap">
                         <p><a href="https://scholar.google.com/citations?user=HLomE9IAAAAJ&hl=en">Publications</a></p>
                         
-                        <p>How is life built?</p>
+                        <p>How is our body built?</p>
                         <p>That's a question I've always been trying to answer. The power of DNA has intrigued me to enter the field of Genomics to crack the code of life. To understand the DNA language, genomicists have worked very hard searching for correlations between snippets of the codes and biological traits, either natural or artificially induced.</p>
                         
                         <p>And I've been one of them.</p>
