--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             	<div class="wrapper">
               	<p><strong>phe在caltech.edu</strong> 
 			<br><strong>ph532于cam.ac.uk</strong>
-			<br>1200 E California Blvd, MC 156-29, Pasadena, CA 91125, USA</p>
+			<br>Mount Pleasant Halls, Cambridge, CB3 0BL, UK </p>
                 <p><a href="https://www.linkedin.com/in/peng-he-73a7a920/">LinkedIn</a></p>
               </div>
             </div>
