--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
                 <div class="extra-wrap">
                  <p>He, Peng<br><big><big>何 鵬</big></big></p>
                  
-                 <p><a href="http://en.wikipedia.org/wiki/Zhejiang_University">Zhejiang University</a>, Science 2008-2009<br><a href="http://en.wikipedia.org/wiki/University_of_hong_kong">University of Hong Kong</a>, 1st Honor, Statistics 2009-2012<br><a href="http://en.wikipedia.org/wiki/Ucla">UCLA</a>, MCDB 2010-2011<br><a href="https://en.wikipedia.org/wiki/Broad_Institute">Broad Institute</a>, Rotation 2013<br><a href="http://en.wikipedia.org/wiki/Caltech">Caltech</a>, Biology 2012-2019</p>
-                  <p>A more detailed timeline of me is <a href="https://www.sanger.ac.uk/people/directory/he-peng">here</a>  </p>
+                 <p><a href="http://en.wikipedia.org/wiki/University_of_hong_kong">University of Hong Kong</a>, 1st Honor, BSc in Statistics and Biochemistry 2009-2012<br>
+	            <a href="http://en.wikipedia.org/wiki/Caltech">Caltech</a>, PhD in Genetics 2012-2019<br>
+		    <a href="https://en.wikipedia.org/wiki/European_Bioinformatics_Institute">EMBL-EBI</a> and <a href="https://en.wikipedia.org/wiki/European_Bioinformatics_Institute">Wellcome Sanger Institute</a>, Postdoc 2019-2024<br>
+		    <a href="https://en.wikipedia.org/wiki/St_Edmund%27s_College,_Cambridge">St Edmund's College at University of Cambridge</a>, </p>Junior research fellow<br>
+                  <p>A more detailed timeline of me is <a href="https://www.sanger.ac.uk/people/directory/he-peng">here</a>.<br>
+		     In 2024 I will start my research group at UCSF (Department of Pathology) as an assistant professor.</p>
 
                 </div>
               </div>
