fixed line break

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                  <p><a href="http://en.wikipedia.org/wiki/University_of_hong_kong">University of Hong Kong</a>, 1st Honor, BSc in Statistics and Biochemistry 2009-2012<br>
 	            <a href="http://en.wikipedia.org/wiki/Caltech">Caltech</a>, PhD in Genetics 2012-2019<br>
 		    <a href="https://en.wikipedia.org/wiki/European_Bioinformatics_Institute">EMBL-EBI</a> and <a href="https://en.wikipedia.org/wiki/European_Bioinformatics_Institute">Wellcome Sanger Institute</a>, Postdoc 2019-2024<br>
-		    <a href="https://en.wikipedia.org/wiki/St_Edmund%27s_College,_Cambridge">St Edmund's College at University of Cambridge</a>, </p>Junior research fellow<br>
+		    <a href="https://en.wikipedia.org/wiki/St_Edmund%27s_College,_Cambridge">St Edmund's College at University of Cambridge</a>, Junior research fellow 2019-2024<br></p>
                   <p>A more detailed timeline of me is <a href="https://www.sanger.ac.uk/people/directory/he-peng">here</a>.<br>
 		     In 2024 I will start my research group at UCSF (Department of Pathology) as an assistant professor.</p>
 
