--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!-- /.box -->
         <!-- .banners -->
         <ul class="banners">
-          <li><a href="#"><div style="width: 260px;"><iframe style="display: block;" src="http://cdn1.willyweather.com/widget/loadView.html?id=3323" width="260" height="63" frameborder="0" scrolling="no"></iframe><a style="height: 63px;text-indent: -9999em;z-index: 1;position: relative;float: right;margin: -63px 0 0 0;display: block;width: 20px" href="http://www.willyweather.com/ca/los-angeles-county/pasadena.html">Pasadena weather info</a></div></a></li>
+          <li><div style="width: 253px;"><iframe style="display: block;" src="https://cdnres.willyweather.com/widget/loadView.html?id=151362" width="253" height="63" frameborder="0" scrolling="no"></iframe><a style="text-indent: -9999em;margin: -63px 0 0 0;float: right;width: 20px;position: relative;display: block;height: 63px;z-index: 1" href="https://www.willyweather.com/ca/san-francisco-county/san-francisco.html" rel="nofollow">https://www.willyweather.com/ca/san-francisco-county/san-francisco.html</a></div></li>
           <li><a href="#"><iframe src="http://free.timeanddate.com/clock/i42ts238/n871/fcfff/tc000/pc000/tt0/tw0/tm1/ts1/tb4" frameborder="0" width="89" height="34"></iframe>
 
 </a></li>
