--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                          <td>2019-2024</td>
                      </tr>
                      <tr>
-                         <td><a href="https://en.wikipedia.org/wiki/St_Edmund%27s_College,_Cambridge">St Edmund's at U of Cam</a></td>
-                         <td>Junior research fellow</td>
+                         <td><a href="https://en.wikipedia.org/wiki/University_of_Cambridge">U of Cambridge</a></td>
+                         <td><a href="https://en.wikipedia.org/wiki/St_Edmund%27s_College,_Cambridge">St Edmund's</a> junior research fellow</td>
                          <td>2019-2024</td>
                      </tr>
                  </table>
