updated the research figures

--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
             <div id="tab1b" class="tab_content">
                 <div class="wrapper">
                     <style>
-                        img { display: block; }
+                        img { display: block; float: none; clear: both}
                         </style>
-                    <img class="img-indent" src="images/BulkRNA.png" width="320" height="480" alt="" />
-
+                    <img class="img-indent" src="images/BulkRNA.png" width="320" height="480" alt="" style="margin-bottom: 200px;"/>
+                    <img class="img-indent" src="images/NatCover - Peng He.png" width="320" height="422" alt="" style="margin-bottom: 200px;"/>
+                    <img class="img-indent" src="images/Cell cover v2 cropped.png" width="320" height="291" alt="" style="margin-bottom: 0px;"/>
                         <div class="extra-wrap">
 
 
